# elm-smile

./: .firebaserc  .gitignore  .prettierrc  README.md  dashboard.html  firebase.json  firebase.rules  index.html  package-lock.json  package.json  vite.config.js
analysis/: CLAUDE.md  README.md  pyproject.toml
analysis/lib/smiledata/: __init__.py  dataset.py  loader.py  participant.py  plotting.py  transforms.py
analysis/notebooks/: example_analysis.ipynb  example_analysis.py  marimo.css
analysis/tests/: __init__.py  conftest.py  test_dataset.py  test_loader.py  test_participant.py  test_plotting.py  test_transforms.py
css/: bulma.css  main.css
data/: README.md
docs/: adduser.md  analysis.md  api.md  autofill.md  bonuses.md  builtins.md  cheatsheet.md  components.d.ts  components.md  concepts.md  configuration.md  contributing.md  dashboard.md  datastorage.md  deploying.md  developermode.md  developing.md  ethics.md  example.md  examplepatterns.md  experimentdesign.md  gettingstarted.md  gitpod.md  help.md  imagesvideo.md  index.md  introduction.md  labconfig.md  manifesto.md  philosophy.md  presentation.md  principles.md  problems.md  qualitycontrol.md  randomization.md  reactive.md  recordingdata.md  recruitment.md  requirements.md  server.md  (+11 more)
env/: .env  .env.deploy.local.secret  .env.docs.local.secret  .env.local.secret
firebase/: firebase.rules
plans/: data_structure_244.md  python_analysis_lib_245.md
plugins/: strip-devtool.js
scripts/: download_data.mjs  generate-qr.js  generate_git_env.sh  strip-devtool.js
src/: App.vue  README.md  (+1 more)
(+484 files in other folders)
