[project]
name = "smiledata"
version = "0.1.0"
description = "Python library for analyzing Smile experiment data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "polars>=1.0.0",
    "pyarrow>=14.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "marimo>=0.18.4",
    "pyzmq>=27.1.0",
    "anthropic>=0.75.0",
    "altair>=6.0.0",
    "statsmodels>=0.14.6",
]

[project.optional-dependencies]
jupyter = [
    "jupyter>=1.0.0",
    "ipywidgets>=8.0.0",
]
marimo = [
    "marimo>=0.9.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
]
all = [
    "smiledata[jupyter,marimo,dev]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lib/smiledata"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["lib"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["lib/smiledata"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.marimo.display]
custom_css = ["notebooks/marimo.css"]
